fixes menu width on small devices

--- a/css/expdb.css
+++ b/css/expdb.css
@@ -397,7 +397,6 @@ select{
 
 #mainmenu{
   display:none;
-  max-width: 20%;
 }
 
 .menu{
